@@ -1841,63 +1841,6 @@ sg_print_sense(const char * leadin, const uint8_t * sbp, int sb_len,
     free(free_cp);
 }
 
-struct value_2names_t {
-    int value;
-    const char * name;
-    const char * name2;
-};
-
-/* These are the error (or warning) exit status values and their associated
- * strings. They combine utility input syntax errors, SCSI status and sense
- * key categories, OS errors (e.g. ENODEV for device not found), one that
- * indicates NVMe non-zero status plus listing those that a Unix OS generates
- * for any executable (that fails). The convention is 0 means no error and
- * that in Unix the exit status is an (unsigned) 8 bit value. */
-static struct value_2names_t exit_str_arr[] = {
-    {0,  "No errors", NULL},
-    {1,  "Syntax error", NULL},
-    {2,  "Device not ready", "sense key"},
-    {3,  "Medium or hardware error", "sense key (plus blank check for tape)"},
-    {5,  "Illegal request", "sense key, apart from Invalid opcode"},
-    {6,  "Unit attention", "sense key"},
-    {7,  "Data protect", "sense key, write protected media?"},
-    {9,  "Illegal request, Invalid opcode", "sense key + asc,ascq"},
-    {10, "Copy aborted", "sense key"},
-    {11, "Aborted command",
-         "sense key, other than protection related (asc=0x10)"},
-    {14, "Miscompare", "sense key"},
-    {15, "File error", NULL},
-    {17, "Illegal request with Info field", NULL},
-    {18, "Medium or hardware error with Info", NULL},
-    {20, "No sense key", "probably additional sense code"},
-    {21, "Recovered error (warning)", "sense key"},  /* Warning not error */
-    {22, "LBA out of range", NULL},
-    {24, "Reservation conflict", "SCSI status"},
-    {25, "Condition met", "SCSI status"},       /* from PRE-FETCH command */
-    {26, "Busy", "SCSI status"},   /* more likely if SAS expander present */
-    {27, "Task set full", "SCSI status"},
-    {28, "ACA aactive", "SCSI status"},
-    {29, "Task aborted", "SCSI status"},
-    {33, "SCSI command timeout", NULL},         /* OS timed out command */
-    {40, "Aborted command, protection error", NULL},
-    {41, "Aborted command, protection error with Info field", NULL},
-    {48, "NVMe command with non-zero status", NULL},
-    {50, "An OS error occurred", "(errno > 46)"},
-    /* OS errors (errno in Unix) from 1 to 46 mapped into this range */
-    {97, "Malformed SCSI command", "trouble building command"},
-    {98, "Some other sense error", "try '-v' option for more information"},
-    {99, "Some other error", "possible transport of driver issue"},
-    /* 100 through 125 unused */
-
-    /* The following error codes are generated by a Unix OS */
-    /* 126: utility did not have executable permissions */
-    /* 127: utility to be executed not found */
-    /* 128 + <signal_number>: signal number that aborted the utility.
-                              real time signals start at offset SIGRTMIN */
-    /* 255: utility returned an exit status > 255 (and probably < 0) */
-    {0xffff, NULL, NULL},       /* end marking sentinel */
-};
-
 /* This examines exit_status and if an error message is known it is output
  * as a string to 'b' and true is returned. If 'longer' is true and extra
  * information is available then it is added to the output. If no error
@@ -1910,7 +1853,7 @@ static struct value_2names_t exit_str_arr[] = {
  * string including the trailing null character is no longer than b_len. */
 bool sg_exit2str(int exit_status, bool longer, int b_len, char *b)
 {
-    const struct value_2names_t * ess = exit_str_arr;
+    const struct sg_value_2names_t * ess = sg_exit_str_arr;
 
     if ((b_len < 1) || (NULL == b))
         return false;
