@@ -17,7 +17,7 @@
 #include "sg_lib_data.h"
 
 
-const char * sg_lib_version_str = "2.43 20180504";/* spc5r19, sbc4r15 */
+const char * sg_lib_version_str = "2.44 20180510";/* spc5r19, sbc4r15 */
 
 
 /* indexed by pdt; those that map to own index do not decay */
@@ -1480,7 +1480,7 @@ const char * sg_lib_pdt_strs[32] = {    /* should have 2**5 elements */
     "object based storage",
     "automation/driver interface",
     "security manager device",  /* obsolete, spc5r01 */
-    "zoned block commands",
+    "host managed zoned block",
     "0x15", "0x16", "0x17", "0x18",
     "0x19", "0x1a", "0x1b", "0x1c", "0x1d",
     "well known logical unit",
@@ -1734,6 +1734,78 @@ struct sg_lib_4tuple_u8 sg_lib_scsi_status_sense_arr[] =
     {0xff, 0xff, 0xff, 0xff},
 };
 
+/* These are the error (or warning) exit status values and their associated
+ * strings. They combine utility input syntax errors, SCSI status and sense
+ * key categories, OS errors (e.g. ENODEV for device not found), one that
+ * indicates NVMe non-zero status plus listing those that a Unix OS generates
+ * for any executable (that fails). The convention is 0 means no error and
+ * that in Unix the exit status is an (unsigned) 8 bit value. */
+struct sg_value_2names_t sg_exit_str_arr[] = {
+    {0,  "No errors", NULL},
+    {1,  "Syntax error", NULL},
+    {2,  "Device not ready", "sense key"},
+    {3,  "Medium or hardware error", "sense key (plus blank check for tape)"},
+    {5,  "Illegal request", "sense key, apart from Invalid opcode"},
+    {6,  "Unit attention", "sense key"},
+    {7,  "Data protect", "sense key, write protected media?"},
+    {9,  "Illegal request, Invalid opcode", "sense key + asc,ascq"},
+    {10, "Copy aborted", "sense key"},
+    {11, "Aborted command",
+         "sense key, other than protection related (asc=0x10)"},
+    {14, "Miscompare", "sense key"},
+    {15, "File error", NULL},
+    {17, "Illegal request with Info field", NULL},
+    {18, "Medium or hardware error with Info", NULL},
+    {20, "No sense key", "probably additional sense code"},
+    {21, "Recovered error (warning)", "sense key"},  /* Warning not error */
+    {22, "LBA out of range", NULL},
+    {24, "Reservation conflict", "SCSI status"},
+    {25, "Condition met", "SCSI status"},       /* from PRE-FETCH command */
+    {26, "Busy", "SCSI status"},   /* more likely if SAS expander present */
+    {27, "Task set full", "SCSI status"},
+    {28, "ACA aactive", "SCSI status"},
+    {29, "Task aborted", "SCSI status"},
+    {33, "SCSI command timeout", NULL},         /* OS timed out command */
+    {40, "Aborted command, protection error", NULL},
+    {41, "Aborted command, protection error with Info field", NULL},
+    {48, "NVMe command with non-zero status", NULL},
+    {50, "An OS error occurred", "(errno > 46)"},
+    /* OS errors (errno in Unix) from 1 to 46 mapped into this range */
+    {97, "Malformed SCSI command", "trouble building command"},
+    {98, "Some other sense error", "try '-v' option for more information"},
+    {99, "Some other error", "possible transport of driver issue"},
+    {100, "Parameter list length error", NULL}, /* these for ddpt, xcopy */
+    {101, "Invalid field in parameter", NULL},
+    {102, "Too many segments in parameters", NULL},
+    {103, "Target underrun", NULL},
+    {104, "Target overrun", NULL},
+    {105, "Operation in progress", NULL},
+    {106, "Insufficient resources to create ROD", NULL},
+    {107, "Insufficient resources to create ROD token", NULL},
+    {108, "Commands cleared by device server", NULL},
+    {109, "See leave_reason for error", NULL},        /* internal error */
+    /* DDPT_CAT_TOKOP_BASE: asc=0x23, ascq=110 follow */
+    {110, "Invalid token operation, cause not reportable", NULL},
+    {111, "Invalid token operation, unsupported token type", NULL},
+    {112, "Invalid token operation, remote token usage not supported", NULL},
+    {113, "Invalid token operation, remote token creation not supported",
+          NULL},
+    {114, "Invalid token operation, token unknown", NULL},
+    {115, "Invalid token operation, token corrupt", NULL},
+    {116, "Invalid token operation, token revoked", NULL},
+    {117, "Invalid token operation, token expired", NULL},
+    {118, "Invalid token operation, token cancelled", NULL},
+    {119, "Invalid token operation, token deleted", NULL},
+    {120, "Invalid token operation, invalid token length", NULL},
+
+    /* The following error codes are generated by a Unix OS */
+    /* 126: utility did not have executable permissions */
+    /* 127: utility to be executed not found */
+    /* 128 + <signal_number>: signal number that aborted the utility.
+                              real time signals start at offset SIGRTMIN */
+    /* 255: utility returned an exit status > 255 (and probably < 0) */
+    {0xffff, NULL, NULL},       /* end marking sentinel */
+};
 
 #else           /* (SG_SCSI_STRINGS && HAVE_NVME && (! IGNORE_NVME)) */
 
@@ -1763,6 +1835,10 @@ struct sg_lib_4tuple_u8 sg_lib_scsi_status_sense_arr[] =
 
     /* Leave this Sentinel value at end of this array */
     {0xff, 0xff, 0xff, 0xff},
+};
+
+struct sg_value_2names_t sg_exit_str_arr[] = {
+    {0xffff, NULL, NULL},       /* end marking sentinel */
 };
 
 #endif           /* (SG_SCSI_STRINGS && HAVE_NVME && (! IGNORE_NVME)) */
