@@ -32,7 +32,7 @@
  * device.
  */
 
-static const char * version_str = "1.15 20180425";
+static const char * version_str = "1.16 20180510";
 
 #ifndef UINT32_MAX
 #define UINT32_MAX ((uint32_t)-1)
@@ -303,7 +303,7 @@ main(int argc, char * argv[])
     sg_fd = sg_cmds_open_device(device_name, o_readonly, verbose);
     if (sg_fd < 0) {
         pr2serr("open error: %s: %s\n", device_name, safe_strerror(-sg_fd));
-        ret = SG_LIB_FILE_ERROR;
+        ret = sg_convert_errno(-sg_fd);
         goto free_buff;
     }
 
@@ -476,10 +476,15 @@ the_end:
     if (res < 0) {
         pr2serr("close error: %s\n", safe_strerror(-res));
         if (0 == ret)
-            ret = SG_LIB_FILE_ERROR;
+            ret = sg_convert_errno(-res);
     }
 free_buff:
     if (free_glbasBuffp)
         free(free_glbasBuffp);
+    if (0 == verbose) {
+        if (! sg_if_can2stderr("sg_get_lba_status failed: ", ret))
+            pr2serr("Some error occurred, try again with '-v' or '-vv' for "
+                    "more information\n");
+    }
     return (ret >= 0) ? ret : SG_LIB_CAT_OTHER;
 }
