@@ -2,7 +2,7 @@ sg3-utils (1.43-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 01 May 2018 13:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 10 May 2018 23:00:00 -0400
 
 sg3-utils (1.42-0.1) unstable; urgency=low
 
