@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20180506] [svn: r770]
+Changelog for sg3_utils-1.43 [20180510] [svn: r771]
   - sg_write_x: where x can be normal, atomic, or(write),
     same, scattered, or stream writes with 16 or 32 byte
     cdbs (sbc4r04 for atomic, sbc4r11 for scattered)
@@ -123,7 +123,8 @@ Changelog for sg3_utils-1.43 [20180506] [svn: r770]
     code in several utilities limited it to 31, fix
   - convert many two valued 'int's to bool
   - sg_lib: add SSC maintenance in/out sa names
-    - enhance exit status, add SG_LIB_OS_BASE_ERR (50)
+    - enhance exit status values and associated
+      strings, add SG_LIB_OS_BASE_ERR (50)
     - add sg_ll_inquiry_v2() and sg_ll_inquiry_pt()
     - add sg_ll_log_sense_v2()
     - add sg_ll_mode_sense10_v2()
